# portable_linux_terminal

./: .gitignore  Light_to_int.ino  README.md
keyboard-firmware/: CMakeLists.txt  README.md  keeb_firmware.c  keyboard_fw.c
schematics/: keyboard.brd  keyboard.sch
